--- a/Neo4J_Rendu.ipynb
+++ b/Neo4J_Rendu.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notre étude porte sur les livres prêtés en bibliothèques à Paris. Notre dataset contient les informations relatives au pret de chaque document disponible à l'emprunt et comptabilise le nombre de prets enregistrés sur l'année 2017. Nous avons souhaité le compléter avec des données accesibles sur l'API Googlebook."
+    "Notre étude porte sur les livres prêtés en bibliothèques à Paris: <br>https://opendata.paris.fr/explore/dataset/tous-les-documents-des-bibliotheques-de-pret/information/ <br> Notre dataset contient les informations relatives au pret de chaque document disponible à l'emprunt et comptabilise le nombre de prets enregistrés sur l'année 2017. Nous avons souhaité le compléter avec des données accesibles sur l'API Googlebook."
    ]
   },
   {
@@ -28,7 +28,7 @@
     "Notre travail s'organise autour de 3 notebook: <br>\n",
     "-notebook Data Preprocessing -- traitements éffectués en amont pour l'import sur Neo4J <br>\n",
     "-notebook Data Visualisation -- analyser la distribution des données et restreindre l'étude <br>\n",
-    "-notebook Googlebook scrapping -- permet d'ajouter une colonne description au dataset <br>\n"
+    "-notebook Googlebook scrapping -- permet d'ajouter une colonne de description des livres au dataset <br>\n"
    ]
   },
   {
@@ -53,6 +53,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -96,6 +103,7 @@
        "      <th>localisations</th>\n",
        "      <th>Langue</th>\n",
        "      <th>cat</th>\n",
+       "      <th>tauxemprunt</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -112,6 +120,7 @@
        "      <td>3.0</td>\n",
        "      <td>français</td>\n",
        "      <td>LFRA Litterature francaise</td>\n",
+       "      <td>14.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -126,6 +135,7 @@
        "      <td>1.0</td>\n",
        "      <td>français</td>\n",
        "      <td>LFRA Litterature francaise</td>\n",
+       "      <td>12.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -140,6 +150,7 @@
        "      <td>10.0</td>\n",
        "      <td>français</td>\n",
        "      <td>LGER Litterature germanique</td>\n",
+       "      <td>10.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -154,6 +165,7 @@
        "      <td>2.0</td>\n",
        "      <td>français</td>\n",
        "      <td>LBRI Litterature britannique</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -168,6 +180,7 @@
        "      <td>1.0</td>\n",
        "      <td>français</td>\n",
        "      <td>LECE Litterature d'Europe centrale</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -195,15 +208,15 @@
        "3                        0.500000          2.0            2.0  français   \n",
        "4                        0.000000          1.0            1.0  français   \n",
        "\n",
-       "                                  cat  \n",
-       "0          LFRA Litterature francaise  \n",
-       "1          LFRA Litterature francaise  \n",
-       "2         LGER Litterature germanique  \n",
-       "3        LBRI Litterature britannique  \n",
-       "4  LECE Litterature d'Europe centrale  "
+       "                                  cat  tauxemprunt  \n",
+       "0          LFRA Litterature francaise         14.0  \n",
+       "1          LFRA Litterature francaise         12.0  \n",
+       "2         LGER Litterature germanique         10.0  \n",
+       "3        LBRI Litterature britannique          2.0  \n",
+       "4  LECE Litterature d'Europe centrale          0.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
