--- a/Data preprocessing.ipynb
+++ b/Data preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 63,
    "metadata": {
     "scrolled": true
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "      <td>français</td>\n",
        "      <td>LBDE Bandes dessinees</td>\n",
        "      <td>Bandes dessinees</td>\n",
-       "      <td>0.444753</td>\n",
+       "      <td>56.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
@@ -466,7 +466,7 @@
        "      <td>français</td>\n",
        "      <td>LBDE Bandes dessinees</td>\n",
        "      <td>Bandes dessinees</td>\n",
-       "      <td>0.433681</td>\n",
+       "      <td>57.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
@@ -484,7 +484,7 @@
        "      <td>français</td>\n",
        "      <td>LBDE Bandes dessinees</td>\n",
        "      <td>Bandes dessinees</td>\n",
-       "      <td>0.516480</td>\n",
+       "      <td>48.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
@@ -502,7 +502,7 @@
        "      <td>français</td>\n",
        "      <td>LBDE Bandes dessinees</td>\n",
        "      <td>Bandes dessinees</td>\n",
-       "      <td>0.459040</td>\n",
+       "      <td>54.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
@@ -520,7 +520,7 @@
        "      <td>français</td>\n",
        "      <td>LBDE Bandes dessinees</td>\n",
        "      <td>Bandes dessinees</td>\n",
-       "      <td>0.518448</td>\n",
+       "      <td>48.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -556,27 +556,27 @@
        "4           52.0  français  LBDE Bandes dessinees  Bandes dessinees   \n",
        "\n",
        "   tauxemprunt  \n",
-       "0     0.444753  \n",
-       "1     0.433681  \n",
-       "2     0.516480  \n",
-       "3     0.459040  \n",
-       "4     0.518448  "
+       "0         56.0  \n",
+       "1         57.0  \n",
+       "2         48.0  \n",
+       "3         54.0  \n",
+       "4         48.0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "maxpret=max(data[\"prets\"]/data[\"exemplaires\"])\n",
-    "data[\"tauxemprunt\"]=(maxpret-data[\"prets\"]/data[\"exemplaires\"])/maxpret\n",
+    "data[\"tauxemprunt\"]=round((1-(maxpret-data[\"prets\"]/data[\"exemplaires\"])/maxpret)*100,0)\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -616,10 +616,11 @@
        "localisations                                                        1\n",
        "Langue                                                        français\n",
        "cat                                         LFRA Litterature francaise\n",
+       "tauxemprunt                                                          8\n",
        "Name: 214547, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
